# aex

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
deploy/neon/: 001_multitenant_control_plane.sql
deploy/railway/: .env.example  railway.json
deploy/vercel/: vercel.json
docker/: models.yaml
docs/: cloud-control-plane-architecture.md
real_agents/: run_real_agents_v21.py
scripts/: prod_real_checks.py  prod_smoke.sh  stress_recovery_check.py
scripts/prod_checks/: README.md  __init__.py  client.py  models.py
scripts/prod_checks/checks/: __init__.py  auth.py  idempotency.py  proxy.py  smoke.py
setup_openclaw/: openclaw.md
src/: README.md
src/aex/: README.md  __init__.py  __main__.py  cli.py  integrations.py  policies.py  sdk.py
src/aex/cli/: README.md  __init__.py  agent_cmds.py  daemon_cmds.py  migrate_cmds.py  ops_cmds.py  plugin_cmds.py  replay_cmds.py  tenant_cmds.py
src/aex/daemon/: README.md  app.py  auth.py  budget.py  config_loader.py  db.py  logging_config.py  metrics.py  rate_limit.py  supervisor.py
src/aex/daemon/app/: README.md  __init__.py  admin.py  endpoints.md  lifecycle.py  non_streaming.py  proxy.py  streaming.py  v2.py
src/aex/daemon/auth/: README.md  __init__.py  hashing.py  middleware.py
src/aex/daemon/control/: README.md  __init__.py  admission.py  idempotency.py  lifecycle.py  router.py  tenancy.py
src/aex/daemon/db/: README.md  __init__.py  connection.py  integrity.py  schema.py
src/aex/daemon/frontend/: README.md  __init__.py  command_center.html  dashboard.html  service.py
src/aex/daemon/ledger/: README.md  __init__.py  budget.py  events.py  replay.py
src/aex/daemon/observability/: README.md  __init__.py  alerts.py  burn_rate.py  health.py  tracing.py  webhooks.py
src/aex/daemon/policy/: README.md  __init__.py  engine.py
src/aex/daemon/runtime/: README.md  __init__.py  recovery.py
src/aex/daemon/sandbox/: README.md  __init__.py  cap_tokens.py  plugins.py  runner.py
src/aex/daemon/utils/: README.md  __init__.py  budget.py  compat.py  config_loader.py  deterministic.py  invariants.py  logging_config.py  metrics.py  policy_engine.py  rate_limit.py  supervisor.py
tests/: infra_assault.py  openclaw_assault.py  openclaw_realworld_live.py  test_aex.py  test_embeddings_hardening.py  test_idempotency_conflict.py  test_openai_sdk.py  test_policies.py  test_sdk_wrap.py
tests/reports/: aex_realworld_report_20260220-112921.md
