[project]
name = "aex"
version = "1.2.0"
description = "AEX - AI Execution Kernel"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Auro Rium", email = "auroriumnexus@gmail.com" }
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.9",
    "rich>=13.7",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
aex = "aex.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests requiring running daemon + real API key",
]
